# rust-web

./: .env  .env.example  Cargo.toml  README.md
public/: index.html
src/: main.rs
src/task/: mod.rs  routes.rs  types.rs
