[package]
name = "web"
version = "0.1.0"
authors = ["Ruidy <ruidy.nemausat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.3"
actix-web = "3"
dotenv = "0.15.0"
env_logger = "0.8.2"
serde = "1.0.118"